--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 </head>
 <body>
     <header>
-        <img src="" alt="logo">
+        <img src="./src/img/logo.png" alt="logo">
         <nav>
             <a href="about.html">About us</a>
             <a href="articles.html">Articles</a>
@@ -88,17 +88,12 @@
         
     </main>
     <footer>
-        <p>Wizz Air Hungary Ltd. All rights reserved. © 2004–2022 Wizz Air © 2000–2022 Navitaire</p>
+        <p>Yuliia Kuts. All rights reserved. © 2022 Yuliia Kuts</p>
         <nav>
-            <a href="">Privacy Notice</a>
-            <a href="">Cookie Policy</a>
-            <a href="">Wizz Air Modern Slavery Statement</a>
-            <a href="">Website Terms of Use</a>
-            <a href="">Agency Registration</a>
-            <a href="">Agency Login</a>
-            <a href="">Wizz Air Mobile App</a>
-            <a href="">Subscribe to our newsletter</a>
-            <a href="">Careers</a>
+            <a href="about.html">About us</a>
+            <a href="articles.html">Articles</a>
+            <a href="contacts.html">Contacts</a>
+            <a href="help.html">Help</a>
         </nav>
     </footer>
 </body>
