--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Exercise 1</title>
 </head>
 <body>
     <header>
@@ -17,6 +17,24 @@
         </nav>
     </header>
     <main>
+        <section>
+            <h2>It's a great news</h2>
+            <p>We are going to go to the mountains.</p>
+            <p>Let's <em><strong>go with us</strong></em>!</p>
+            <h4>All you need to take with you are:</h4>
+            <ol>
+                <li>Mountain bagpack
+                    <ul>
+                        <li>Sleeping bag</li>
+                        <li>Cup, spoon, knife</li>
+                        <li>Matches</li>
+                    </ul>
+                </li>
+                <li>The tent</li>
+                <li>Your smile</li>
+            </ol>
+            <img src="/src/img/mountains.png" alt="mountains">
+        </section>
         <section>
             <form>
 
@@ -63,29 +81,7 @@
                 <h4>ROME</h4>
                 <p>from Split</p>
             </article>
-        </section>
-        <section>
-            <h3>
-                Hand pick the offers you like best
-            </h3>
-        </section>
-        <section>
-            <h3>
-                Save even more with our flight bundles
-            </h3>
-        </section>
-        <section>
-            <h3>
-                Welcome to the world of opportunity
-            </h3>
-        </section>
-        <section>
-
-        </section>
-        <section>
-
-        </section>
-        
+        </section>      
     </main>
     <footer>
         <p>Yuliia Kuts. All rights reserved. © 2022 Yuliia Kuts</p>
