Finish commit of Ex 1

--- a/index.html
+++ b/index.html
@@ -33,55 +33,35 @@
                 <li>The tent</li>
                 <li>Your smile</li>
             </ol>
-            <img src="/src/img/mountains.png" alt="mountains">
+            <img src="./src/img/mountains.png" alt="mountains" width="500px">
         </section>
         <section>
-            <form>
-
-            </form>
-            <article>
-                <h2>News header</h2>
-                <p>News</p>
-            </article>
+            <h4>If interested, fill out the form below</h4>
+                <label for="name">Name</label>
+                <input type="text" id="name"></br>
+                <label for="email">E-mail</label>
+                <input type="mail" id="email"></br>
+                <label for="tel">Phone number</label>
+                <input type="tel" id="tel"></br>
+                <label for="question">Any questions</label>
+                <textarea></textarea></br>
+            </form>   
         </section>
         <section>
-            <h3>Explore your travel opportunities with WIZZ!</h3>
+            <h3>Additional contact data</h3>
             <table>
                 <tr>
-                    <td>
-                        <img src="" alt="">
-                        <h4>FARE FINDER</h4>
-                        <p>Some text</p>
-                    </td>
-                    <td><img src="" alt="">
-                        <h4>FARE FINDER</h4>
-                        <p>Some text</p></td>
-                    <td><img src="" alt="">
-                        <h4>FARE FINDER</h4>
-                        <p>Some text</p></td>
-                    <td><img src="" alt="">
-                        <h4>FARE FINDER</h4>
-                        <p>Some text</p></td>
+                    <th>Address</th>
+                    <th>Phone number</th>
+                    <th>Your personal manager</th>
+                </tr>
+                <tr>
+                    <td>Lausanne</td>
+                    <td>07912345678</td>
+                    <td>Mary Smith</td>
                 </tr>
             </table>
-        </section>
-        <section>
-            <h3>
-                Cheap flight offers - 4 routes from your area
-            </h3>
-            <article>
-                <h4>MALAGA</h4>
-                <p>from London</p>
-            </article>
-            <article>
-                <h4>KRAKOW</h4>
-                <p>from Billund</p>
-            </article>
-            <article>
-                <h4>ROME</h4>
-                <p>from Split</p>
-            </article>
-        </section>      
+        </section>   
     </main>
     <footer>
         <p>Yuliia Kuts. All rights reserved. © 2022 Yuliia Kuts</p>
