--- a/index.html
+++ b/index.html
@@ -33,18 +33,19 @@
                 <li>The tent</li>
                 <li>Your smile</li>
             </ol>
-            <img src="./src/img/mountains.png" alt="mountains" width="500px">
+            <img src="./src/img/mountains.png" alt="mountains" width="500">
         </section>
         <section>
             <h4>If interested, fill out the form below</h4>
+            <form>
                 <label for="name">Name</label>
-                <input type="text" id="name"></br>
+                <input type="text" id="name"><br />
                 <label for="email">E-mail</label>
-                <input type="mail" id="email"></br>
+                <input type="email" id="email"><br />
                 <label for="tel">Phone number</label>
-                <input type="tel" id="tel"></br>
+                <input type="tel" id="tel"><br />
                 <label for="question">Any questions</label>
-                <textarea></textarea></br>
+                <textarea id="question"></textarea><br />
             </form>   
         </section>
         <section>
